--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -221,7 +221,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "(614, 13)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "max          1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "[614 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -848,7 +848,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -926,7 +926,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -970,7 +970,7 @@
        "<AxesSubplot:title={'center':'ApplicantIncome'}, xlabel='Education'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1014,7 +1014,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1051,7 +1051,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "<AxesSubplot:title={'center':'LoanAmount'}, xlabel='Loan_Status'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1199,7 +1199,7 @@
        "Not Graduate        332.156250  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1297,7 +1297,7 @@
        "Urban                332.800000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "Yes            336.987147  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
        "1.0                   342.192719  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,10 +1528,13 @@
     "\n",
     "# libraries for pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer, OneHotEncoder, StandardScaler\n",
+    "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.decomposition import PCA\n",
+    "\n",
+    "\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
@@ -1542,21 +1545,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# excluding gender and Loan_ID\n",
     "# There is an imbalance in genders, it may influence predictions inadvertently, and should have no bearing on approval.\n",
     "y = df['Loan_Status']\n",
-    "X = df.drop(['Loan_ID', 'Gender', 'Loan_Status'], axis=1)\n",
-    "\n",
-    "X['Credit_History'] = X['Credit_History'].astype(str)"
+    "X = df.drop(['Loan_ID', 'Gender', 'Loan_Status'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1567,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['Credit_History'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,12 +1615,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to transform \n",
+    "\n",
+    "def convertString(data):\n",
+    "    string_data = data.astype(str)\n",
+    "    return string_data\n",
+    "\n",
+    "string_transformer = FunctionTransformer(convertString)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# log function\n",
     "def log_transform(data):\n",
+    "    \n",
     "    return np.log(data)\n",
     "\n",
     "log_transform_object = FunctionTransformer(log_transform)"
@@ -1607,52 +1644,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define individual transformers in a pipeline\n",
-    "\n",
-    "# median due to extreme values\n",
-    "num_fillna = Pipeline([\n",
-    "    ('impute_median', SimpleImputer(strategy='median'))\n",
-    "    ])\n",
-    "cat_fillna = Pipeline([\n",
-    "    ('impute_mode', SimpleImputer(strategy='most_frequent')),\n",
-    "    ('one_hot', OneHotEncoder())\n",
-    "    ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fillna = ColumnTransformer([\n",
-    "    ('num_fillna', num_fillna), num_feats\n",
-    "    ('cat_fillna', cat_fillna), cat_feats\n",
-    "    ], remainder='passthrough')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make total income\n",
     "\n",
-    "class totalIncomeTransformer:\n",
-    "    def fit(self, X):\n",
-    "        return self\n",
-    "    \n",
-    "    def transform(self, X):\n",
-    "        applicant_income = X['ApplicantIncome']\n",
-    "        coapp_income = X['CoapplicantIncome']\n",
-    "        return applicant_income + coapp_income\n",
+    "def totalIncome(X):\n",
+    "    applicant_income = X['ApplicantIncome']\n",
+    "    coapp_income = X['CoapplicantIncome']\n",
+    "    X = X.copy()\n",
+    "    X['total_income'] = applicant_income + coapp_income\n",
+    "    return X\n",
     "\n",
-    "add_total_income = FeatureUnion()"
+    "total_income_transformer = FunctionTransformer(totalIncome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop old incomes\n",
+    "def dropIncome(X):\n",
+    "    return X.drop(['ApplicantIncome', 'CoapplicantIncome'], axis=1)\n",
+    "\n",
+    "drop_income_transformer = FunctionTransformer(dropIncome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class applyLog():\n",
+    "    def __init__(self, log_col):\n",
+    "        self.log_col = log_col\n",
+    "\n",
+    "    def fit(self, X, y = None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X, y = None):\n",
+    "    \n",
+    "        X = X.copy()\n",
+    "        X[self.log_col] = np.log(X[self.log_col])\n",
+    "\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define cleaning Pipeline\n",
+    "cleaning = Pipeline([\n",
+    "    # add incomes into one feature\n",
+    "    ('total_income', total_income_transformer),\n",
+    "    # # remove unused income features\n",
+    "    ('drop_old_income', drop_income_transformer),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Also remove from feats list\n",
+    "for element in ['CoapplicantIncome', 'ApplicantIncome']:\n",
+    "    num_feats.remove(element)\n",
+    "num_feats.append('total_income')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Engineering Pipelines\n",
+    "\n",
+    "num_transform = Pipeline([\n",
+    "    ('num_fillna_median', SimpleImputer(strategy='median')),\n",
+    "    ('scaling', StandardScaler()),\n",
+    "    ('select_best', SelectKBest(k=3)),\n",
+    "    ])\n",
+    "\n",
+    "cat_transform = Pipeline([\n",
+    "    ('cat_fillna_median', SimpleImputer(strategy='most_frequent')),\n",
+    "    ('string_transformer', string_transformer),\n",
+    "    ('one_hot', OneHotEncoder(sparse=False)),\n",
+    "    ('PCA', PCA(n_components=3)),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessing = ColumnTransformer([\n",
+    "    ('num_transform', num_transform, num_feats),\n",
+    "    ('cat_transform', cat_transform, cat_feats)\n",
+    "    ], remainder='drop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LoanAmount', 'Loan_Amount_Term', 'Credit_History', 'total_income']"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_feats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make final pipeline\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('cleaning', cleaning),\n",
+    "    ('log_income', applyLog(log_col='total_income')),\n",
+    "    ('log_loan_amount', applyLog(log_col='LoanAmount')),\n",
+    "    ('preprocessing', preprocessing),\n",
+    "    ('estimator', LogisticRegression())\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pipeline.fit(X_train, y_train)"
    ]
   },
   {
@@ -1661,16 +1807,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Engineering Features\n",
+    "param_grid = {\n",
+    "    'classifier'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8617886178861789"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Engineering Features\n",
     "\n",
-    "num_transform = Pipeline([\n",
-    "    ('log_transform', log_transform_object),\n",
-    "    ('scaling', StandardScaler()),\n",
-    "    ])\n",
+    "# num_transform = Pipeline([\n",
+    "#     ('scaling', StandardScaler()),\n",
+    "#     ('select_best', SelectKBest(k=3))\n",
+    "# ])\n",
     "\n",
-    "cat_transform = Pipeline([\n",
-    "    ('one_hot', OneHotEncoder())\n",
-    "])"
+    "# cat_transform = Pipeline([\n",
+    "#     ('one_hot', OneHotEncoder()),\n",
+    "#     ('pca', PCA(n_components=3))\n",
+    "# ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Apply Feature transformations to specific columns\n",
+    "# preprocessing = ColumnTransformer([\n",
+    "#     # ()\n",
+    "#     ('log_transformer', log_transform_object, ['LoanAmount', 'TotalIncome']),\n",
+    "#     ('num_transform', num_transform, num_feats),\n",
+    "#     ('cat_transform', cat_transform, cat_feats),\n",
+    "#     ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline = Pipeline([\n",
+    "#     ('preprocessing', preprocessing),\n",
+    "#     ('classifier', LogisticRegression())\n",
+    "#     ])"
    ]
   },
   {
@@ -1690,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1923,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1741,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1955,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1775,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1999,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1819,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +2033,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     },
