--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -221,7 +221,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "(614, 13)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "max          1.000000  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "[614 rows x 13 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -848,7 +848,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -926,7 +926,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -970,7 +970,7 @@
        "<AxesSubplot:title={'center':'ApplicantIncome'}, xlabel='Education'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1014,7 +1014,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1051,7 +1051,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "<AxesSubplot:title={'center':'LoanAmount'}, xlabel='Loan_Status'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1199,7 +1199,7 @@
        "Not Graduate        332.156250  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1297,7 +1297,7 @@
        "Urban                332.800000  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "Yes            336.987147  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
        "1.0                   342.192719  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "# libraries for pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer, OneHotEncoder, StandardScaler\n",
@@ -1535,9 +1535,10 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "\n",
-    "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
+    "# Models to try\n",
+    "from sklearn.linear_model import LogisticRegression, RidgeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "\n",
     "df.columns"
@@ -1545,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1577,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,13 +1740,13 @@
     "    ('cat_fillna_median', SimpleImputer(strategy='most_frequent')),\n",
     "    ('string_transformer', string_transformer),\n",
     "    ('one_hot', OneHotEncoder(sparse=False)),\n",
-    "    ('PCA', PCA(n_components=3)),\n",
+    "    ('pca', PCA(n_components=3)),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1767,7 @@
        "['LoanAmount', 'Loan_Amount_Term', 'Credit_History', 'total_income']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,13 +1789,13 @@
     "    ('log_income', applyLog(log_col='total_income')),\n",
     "    ('log_loan_amount', applyLog(log_col='LoanAmount')),\n",
     "    ('preprocessing', preprocessing),\n",
-    "    ('estimator', LogisticRegression())\n",
+    "    ('classifier', LogisticRegression())\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,38 +1804,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# param_grid = {\n",
+    "#     'classifier': [SVC(), RidgeClassifier(), LogisticRegression(), RandomForestClassifier()],\n",
+    "#     'preprocessing__cat_transform__pca__n_components': [3,5],\n",
+    "#     'preprocessing__num_transform__select_best__k': [1,3]\n",
+    "# }\n",
+    "\n",
     "param_grid = {\n",
-    "    'classifier'\n",
+    "    'classifier': [SVC(), RandomForestClassifier()],\n",
+    "    'preprocessing__cat_transform__pca__n_components': [3,5],\n",
+    "    'preprocessing__num_transform__select_best__k': [1,3]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8617886178861789"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.score(X_test, y_test)"
+    "grid = GridSearchCV(pipeline, param_grid=param_grid, cv=5, n_jobs=-1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best test set accuracy: 0.8617886178861789\n",
+      "Achieved with hyperparameters: {'classifier': SVC(), 'preprocessing__cat_transform__pca__n_components': 3, 'preprocessing__num_transform__select_best__k': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "best_model = grid.best_estimator_\n",
+    "best_hyperparams = grid.best_params_\n",
+    "best_acc = grid.score(X_test, y_test)\n",
+    "print(f'Best test set accuracy: {best_acc}\\nAchieved with hyperparameters: {best_hyperparams}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1853,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1905,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
