Adding plots and images, cleaning readme

--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -8793,7 +8793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8813,40 +8813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Loan_ID              LP001003\n",
-       "Gender                   Male\n",
-       "Married                   Yes\n",
-       "Dependents                  1\n",
-       "Education            Graduate\n",
-       "Self_Employed              No\n",
-       "ApplicantIncome          4583\n",
-       "CoapplicantIncome      1508.0\n",
-       "LoanAmount              128.0\n",
-       "Loan_Amount_Term        360.0\n",
-       "Credit_History            1.0\n",
-       "Property_Area           Rural\n",
-       "Loan_Status                 N\n",
-       "Name: 1, dtype: object"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.iloc[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -8869,14 +8836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'[\\n    \"Y\"\\n]\\n'\n"
+      "['Y']\n"
      ]
     }
    ],
@@ -8887,7 +8854,7 @@
     "\n",
     "response = requests.post(url=url, json=json_data)\n",
     "\n",
-    "pprint.pprint(response.text)"
+    "pprint.pprint(response.json())"
    ]
   },
   {
